# cpp-ble

./: CMakeLists.txt  README.md
Cpp-ble/app/: build.gradle  proguard-rules.pro
Cpp-ble/app/src/main/: AndroidManifest.xml
Cpp-ble/app/src/main/res/layout/: activity_main.xml
Cpp-ble/app/src/main/res/values/: strings.xml
Cpp-ble/gradle/wrapper/: gradle-wrapper.properties
androidbuild/: build.gradle  gradle.properties  local.properties  settings.gradle
androidbuild/app/: CMakeLists.txt  build.gradle
androidbuild/app/src/main/: AndroidManifest.xml
androidbuild/app/src/main/cpp/: native-lib.cpp
androidbuild/app/src/main/res/layout/: activity_main.xml
androidbuild/cpp-ble/: build.gradle
androidbuild/cpp-ble/libs/: cpp-ble-debug.aar  cpp-ble-release.aar
androidbuild/cpp-ble/src/main/: AndroidManifest.xml
androidbuild/gradle/wrapper/: gradle-wrapper.properties
ble/: Central.cpp  Central.h  CentralDelegate.h  Central_android.cpp  Central_ios.mm  Central_p.cpp  Central_p.h  Central_p_apple.mm
djinni_test/: CMakeLists.txt  Makefile  run_djinni.sh
djinni_test/generated-src/cpp/: central_interface.hpp
djinni_test/generated-src/java/: CentralInterface.java
djinni_test/generated-src/jni/: NativeCentralInterface.cpp  NativeCentralInterface.hpp
djinni_test/generated-src/objc/: CppBle-Bridging-Header.h  YGCentralInterface+Private.h  YGCentralInterface+Private.mm  YGCentralInterface.h
djinni_test/handwritten-src/cpp/basic/: UUID-objc.hpp  UUID.hpp
djinni_test/idls/: core.idl
iosbuild/TestBLE/: AppDelegate.h  AppDelegate.m  CustomCentralDelegate.hpp  ViewController.h  ViewController.mm  main.m
iosbuild/TestBLE.xcodeproj/: project.pbxproj
iosbuild/TestBLE.xcodeproj/project.xcworkspace/xcuserdata/yheinrich.xcuserdatad/: UserInterfaceState.xcuserstate
iosbuild/TestBLE.xcodeproj/xcuserdata/yheinrich.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
iosbuild/TestBLE.xcodeproj/xcuserdata/yheinrich.xcuserdatad/xcschemes/: TestBLE.xcscheme  TestBLEMac.xcscheme  xcschememanagement.plist
iosbuild/TestBLEMac/: AppDelegate.h  AppDelegate.m  CustomCentralDelegate.cpp  CustomCentralDelegate.hpp  CustomCentralDelegate.mm  Info.plist  ViewController.h  ViewController.mm  main.m
iosbuild/TestBLEMac/Base.lproj/: Main.storyboard
platform/android/: AndroidAdapter.cpp  AndroidAdapter.h  AndroidJNIHelper.cpp  AndroidJNIHelper.h
platform/apple/: AppleCentralDelegate.h  AppleCentralDelegate.mm  CentralProxy.h  CentralProxy.mm
platform/jni/: AndroidJNIHelper.cpp  AndroidJNIHelper.h
uuid/: UUID.cpp  UUID.h
(+10 files in other folders)
